<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="80dp"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <hr.algebra.carmanager.ui.custom.CarStatusView
        android:id="@+id/carStatusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerCarDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginTop="8dp" />

</LinearLayout>